# quizlet_helper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
quizlet_helper/: __init__.py  _common.py  common.py  error.py  folder.py  lang.py  study_set.py  user.py
tests/: auth.json  auth.yml  barron.py  folder_test.py  sample_user.py  set_in_folder.py
