[tool.poetry]
name = "quizlet-helper"
version = "0.1.0"
description = "A OOP oriented Quizlet helper for fast Quizlet scraping and generation"
authors = ["Yubo"]
homepage = "https://github.com/Yubo-Cao/quizlet_helper"
repository = "https://github.com/Yubo-Cao/quizlet_helper"
keywords = ["quizlet", "scraping", "helper"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.25.2"
PyYAML = "^5.4.1"
